k8s/namespaces/clusters/betty/networking/omada/network-policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: omada-controller
  namespace: networking
  labels:
    app.kubernetes.io/instance: omada-controller
    app.kubernetes.io/name: omada-controller
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: omada-controller
      app.kubernetes.io/name: omada-controller
  egress:
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "8043"
              protocol: UDP
    - toEntities:
        - cluster
